--- a/iOSTaskForFoodRecipes/Scenario/HomeScreen/View/Home.storyboard
+++ b/iOSTaskForFoodRecipes/Scenario/HomeScreen/View/Home.storyboard
@@ -46,7 +46,7 @@
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="5"/>
+                                        <real key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
@@ -55,22 +55,22 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HistoryCell" id="ap3-NU-Am1" customClass="HistoryCell" customModule="iOSTaskForFoodRecipes" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="31.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="41"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ap3-NU-Am1" id="F76-Jg-cDW">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="31.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="41"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ll-s5-byQ">
-                                                    <rect key="frame" x="20" y="5" width="374" height="21.5"/>
+                                                    <rect key="frame" x="20" y="10" width="374" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="6ll-s5-byQ" firstAttribute="top" secondItem="F76-Jg-cDW" secondAttribute="top" constant="5" id="91a-JU-Sbz"/>
-                                                <constraint firstAttribute="bottom" secondItem="6ll-s5-byQ" secondAttribute="bottom" constant="5" id="ech-Rq-oFX"/>
+                                                <constraint firstItem="6ll-s5-byQ" firstAttribute="top" secondItem="F76-Jg-cDW" secondAttribute="top" constant="10" id="91a-JU-Sbz"/>
+                                                <constraint firstAttribute="bottom" secondItem="6ll-s5-byQ" secondAttribute="bottom" constant="10" id="ech-Rq-oFX"/>
                                                 <constraint firstItem="6ll-s5-byQ" firstAttribute="leading" secondItem="F76-Jg-cDW" secondAttribute="leading" constant="20" id="um2-k7-9A7"/>
                                                 <constraint firstAttribute="trailing" secondItem="6ll-s5-byQ" secondAttribute="trailing" constant="20" id="vwN-sf-7hi"/>
                                             </constraints>
@@ -80,7 +80,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ItemCell" rowHeight="104.5" id="cSn-Kg-67w" customClass="ItemCell" customModule="iOSTaskForFoodRecipes" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="59.5" width="414" height="104.5"/>
+                                        <rect key="frame" x="0.0" y="69" width="414" height="104.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cSn-Kg-67w" id="GBN-Uc-ejA">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="104.5"/>
@@ -143,16 +143,16 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Knu-AI-Rmn">
-                                <rect key="frame" x="50" y="312.5" width="314" height="271"/>
+                                <rect key="frame" x="50" y="270.5" width="314" height="355"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="find your recipes-1" translatesAutoresizingMaskIntoConstraints="NO" id="hox-cR-RDd">
-                                        <rect key="frame" x="30" y="30" width="254" height="170"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="find your recipes-1" translatesAutoresizingMaskIntoConstraints="NO" id="hox-cR-RDd">
+                                        <rect key="frame" x="30" y="30" width="254" height="254"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="170" id="eGR-4j-e2t"/>
+                                            <constraint firstAttribute="width" secondItem="hox-cR-RDd" secondAttribute="height" multiplier="1:1" id="iHA-CA-qcM"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find Your Recipe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTq-uD-Pd5">
-                                        <rect key="frame" x="20" y="225" width="274" height="21"/>
+                                        <rect key="frame" x="20" y="309" width="274" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
